--- a/css/style.css
+++ b/css/style.css
@@ -399,22 +399,12 @@ main {
       display: block;
       width: 100%;
       text-align: center; }
-  main .filter {
-    width: 100%;
-    height: 500px;
-    background: -webkit-gradient(linear, left bottom, left top, from(#ffffff), to(transparent));
-    background: -webkit-linear-gradient(bottom, #ffffff, transparent);
-    background: -o-linear-gradient(bottom, #ffffff, transparent);
-    background: linear-gradient(to top, #ffffff, transparent);
-    position: fixed;
-    bottom: 0px;
-    z-index: 1; }
   main .bg {
     width: 100%;
     height: 100%;
-    background: url("../images/bg.jpg");
+    background: url("../images/bg.jpg") no-repeat bottom left;
     position: fixed;
-    top: 0px;
+    bottom: 0px;
     z-index: -999; }
 
 @media only screen and (max-width: 769px) {
