--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -150,20 +150,20 @@ main {
             text-align: center;
         }
     }
-    .filter {
-        width: 100%;
-        height: 500px;
-        background: linear-gradient(to top,#ffffff,transparent);
-        position: fixed;
-        bottom: 0px;
-        z-index: 1;
-    }
+    // .filter {
+    //     width: 100%;
+    //     height: 250px;
+    //     background: linear-gradient(to top,#ffffff,transparent);
+    //     position: fixed;
+    //     bottom: 0px;
+    //     z-index: 1;
+    // }
     .bg {
         width: 100%;
         height: 100%;
-        background: url('../images/bg.jpg');
+        background: url('../images/bg.jpg') no-repeat bottom left;
         position: fixed;
-        top: 0px;
+        bottom: 0px;
         z-index: -999;
     }
 }
