--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -161,9 +161,9 @@ main {
     .bg {
         width: 100%;
         height: 100%;
-        background: url('../images/bg.jpg') no-repeat bottom left;
+        background: url('../images/bg.jpg') no-repeat left bottom;
         position: fixed;
-        bottom: 0px;
+        top: 0px;
         z-index: -999;
     }
 }
